--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "youcode/gestion-des-commandes",
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "src/"
         }
     },
     "authors": [
